# moos-ivp-cicd-testing

./: .gitignore  AGENTS.md  CMakeLists.txt  GITHUB_ACTIONS.md  PARALLELIZATION_IDEA.md  README  README.md  _29_4_2026_____00_26.pid  build-matrix.sh  mbutil_filebuffer_mission_continuation.txt  results.txt
src/pTrafficManager/: CMakeLists.txt  TrafficManager.cpp  TrafficManager.h  TrafficManager_Info.cpp  TrafficManager_Info.h  main.cpp
tests/cpp/: CMakeLists.txt  README.md  ctests.sh
tests/cpp/alogavg/: CMakeLists.txt
tests/cpp/alogavg/AvgHandler/: AvgHandlerTest.cpp  CMakeLists.txt
tests/cpp/alogbin/: CMakeLists.txt
tests/cpp/alogbin/LogBinHandler/: CMakeLists.txt  LogBinHandlerTest.cpp
tests/cpp/alogcat/: CMakeLists.txt
tests/cpp/alogcat/ALogCatHandler/: ALogCatHandlerTest.cpp  CMakeLists.txt
tests/cpp/alogcd/: CMakeLists.txt
tests/cpp/alogcd/CollisionReporter/: CMakeLists.txt  CollisionReporterTest.cpp
tests/cpp/alogcheck/: CMakeLists.txt
tests/cpp/alogcheck/LogChecker/: CMakeLists.txt  LogCheckerTest.cpp
tests/cpp/alogclip/: CMakeLists.txt
tests/cpp/alogclip/ALogClip/: ALogClipTest.cpp  CMakeLists.txt
tests/cpp/alogeplot/: CMakeLists.txt
tests/cpp/alogeplot/EPlotEngine/: CMakeLists.txt  EPlotEngineTest.cpp
tests/cpp/alogeval/: CMakeLists.txt
tests/cpp/alogeval/ALogEvaluator/: ALogEvaluatorTest.cpp  CMakeLists.txt
tests/cpp/aloggrep/: CMakeLists.txt
tests/cpp/aloggrep/GrepHandler/: CMakeLists.txt  GrepHandlerTest.cpp
tests/cpp/aloghelm/: CMakeLists.txt
tests/cpp/aloghelm/HelmReporter/: CMakeLists.txt  HelmReporterTest.cpp
tests/cpp/alogiter/: CMakeLists.txt
tests/cpp/alogiter/IterHandler/: CMakeLists.txt  IterHandlerTest.cpp
tests/cpp/alogload/: CMakeLists.txt
tests/cpp/alogload/LoadReporter/: CMakeLists.txt  LoadReporterTest.cpp
tests/cpp/alogmhash/: CMakeLists.txt
tests/cpp/alogmhash/MHashReporter/: CMakeLists.txt  MHashReporterTest.cpp
tests/cpp/alogpare/: CMakeLists.txt
tests/cpp/alogpare/PareEngine/: CMakeLists.txt  PareEngineTest.cpp
tests/cpp/alogpick/: CMakeLists.txt
tests/cpp/alogpick/PickHandler/: CMakeLists.txt  PickHandlerTest.cpp
tests/cpp/alogrm/: CMakeLists.txt
tests/cpp/alogrm/FiltHandler/: CMakeLists.txt  FiltHandlerTest.cpp
tests/cpp/alogscan/: CMakeLists.txt
tests/cpp/alogscan/ScanHandler/: CMakeLists.txt  ScanHandlerTest.cpp
tests/cpp/alogsort/: CMakeLists.txt
tests/cpp/alogsort/SortHandler/: CMakeLists.txt  SortHandlerTest.cpp
tests/cpp/alogsplit/: CMakeLists.txt
tests/cpp/alogsplit/SplitHandler/: CMakeLists.txt  SplitHandlerTest.cpp
tests/cpp/alogtest/: CMakeLists.txt
tests/cpp/alogtest/LogTester/: CMakeLists.txt  LogTesterTest.cpp
tests/cpp/alogtm/: CMakeLists.txt
tests/cpp/alogtm/TGrepHandler/: CMakeLists.txt  TGrepHandlerTest.cpp
tests/cpp/apputil/: CMakeLists.txt
tests/cpp/apputil/AppCast/: AppCastRepoTest.cpp  CMakeLists.txt
tests/cpp/apputil/Formatting/: CMakeLists.txt  FormattingTest.cpp
tests/cpp/apputil/InfoCast/: CMakeLists.txt  InfoCastSettingsTest.cpp
tests/cpp/behaviors/Core/: BehaviorCoreTestUtils.h  CMakeLists.txt  ContactStateSetTest.cpp  ContactStateTest.cpp  IvPBehaviorTest.cpp  IvPContactBehaviorTest.cpp  LifeEventTest.cpp
tests/cpp/behaviors_colregs/Core/: AvdColregsBehaviorTest.cpp  CMakeLists.txt  ColregsAOFTest.cpp  ColregsTestUtils.h  VelocityFilterTest.cpp
tests/cpp/behaviors_marine/: CMakeLists.txt
tests/cpp/behaviors_marine/CoreBehaviors/: AbortToPointTest.cpp  AvoidCollisionTest.cpp  AvoidObstacleV24Test.cpp  BearingLineTest.cpp  BehaviorMarineTestUtils.h  CMakeLists.txt  ConstantDepthTest.cpp  ConstantHeadingTest.cpp  ConstantSpeedTest.cpp  ConvoyTest.cpp  CutRangeTest.cpp  FixedTurnTest.cpp  FullStopTest.cpp  GoToDepthTest.cpp  HSLineTest.cpp  HeadingBiasTest.cpp  HeadingChangeTest.cpp  HeadingHysteresisTest.cpp  HysteresisTest.cpp  LegRunTest.cpp  LoiterTest.cpp  MaintainHeadingTest.cpp  MaxDepthTest.cpp  MaxSpeedTest.cpp  MemoryTurnLimitTest.cpp  MinAltitudeXTest.cpp  OpRegionRecoverTest.cpp  OpRegionTest.cpp  OpRegionV24Test.cpp  PModelViewTest.cpp  PeriodicSpeedTest.cpp  PeriodicSurfaceTest.cpp  RStationKeepTest.cpp  ShadowTest.cpp  StationKeepTest.cpp  TestFailureTest.cpp  TimeOutTest.cpp  TimerTest.cpp  TrailTest.cpp  WaypointTest.cpp  (+1 more)
tests/cpp/bhvutil/: CMakeLists.txt
tests/cpp/bhvutil/AOFs/: BhvutilAOFTest.cpp  CMakeLists.txt
tests/cpp/bhvutil/ExFilterSet/: CMakeLists.txt  ExFilterSetTest.cpp
tests/cpp/contacts/: CMakeLists.txt
tests/cpp/encounters/: CMakeLists.txt
tests/cpp/evalutil/: CMakeLists.txt
tests/cpp/gen_moos_app/: CMakeLists.txt
tests/cpp/genutil/: CMakeLists.txt
tests/cpp/geodaid/: CMakeLists.txt
tests/cpp/geometry/: CMakeLists.txt
tests/cpp/helmivp/: CMakeLists.txt
tests/cpp/isay/: CMakeLists.txt
tests/cpp/ivpbuild/: CMakeLists.txt
tests/cpp/ivpcore/: CMakeLists.txt
tests/cpp/ivpsolve/: CMakeLists.txt
tests/cpp/logic/: CMakeLists.txt
tests/cpp/logutils/: CMakeLists.txt
tests/cpp/manifest/: CMakeLists.txt
tests/cpp/marine_pid/: CMakeLists.txt
tests/cpp/mbutil/: CMakeLists.txt
tests/cpp/mission_utility/: CMakeLists.txt
tests/cpp/moosgeodesy/: README.md
tests/cpp/nspatch/: CMakeLists.txt
tests/cpp/nsplug/: CMakeLists.txt
tests/cpp/obstacles/: CMakeLists.txt
tests/cpp/pechovar/: CMakeLists.txt
tests/cpp/pickpos/: CMakeLists.txt
tests/cpp/pluck/: CMakeLists.txt
tests/cpp/polar/: CMakeLists.txt
tests/cpp/prealm/: CMakeLists.txt
tests/cpp/projfield/: CMakeLists.txt
tests/cpp/realm/: CMakeLists.txt
tests/cpp/support/: GeometryTestUtils.h  IvPBuildTestUtils.h  NumericAssertions.h  TestFileUtils.h
tests/cpp/survey/: CMakeLists.txt
tests/cpp/tagrep/: CMakeLists.txt
tests/cpp/turngeo/: CMakeLists.txt
tests/cpp/ucommand/: CMakeLists.txt
tests/cpp/ufield/: CMakeLists.txt
tests/cpp/ufldbeaconrangesensor/: CMakeLists.txt
tests/cpp/ufldcollisiondetect/: CMakeLists.txt
tests/cpp/uflddelve/: CMakeLists.txt
tests/cpp/uhelmscope/: CMakeLists.txt
tests/cpp/uplotviewer/: CMakeLists.txt
tests/cpp/utimerscript/: CMakeLists.txt
(+4539 files in other folders)
