add_subdirectory(AngleUtils)
add_subdirectory(GeomUtils)
add_subdirectory(ArcUtils)
add_subdirectory(XYArc)
add_subdirectory(CircularUtils)
add_subdirectory(XYPrimitiveShapes)
add_subdirectory(Dubins)
add_subdirectory(TrackProximity)
add_subdirectory(XYFormatUtilsPoint)
add_subdirectory(XYFormatUtilsPoly)
add_subdirectory(XYFormatUtilsSegl)
add_subdirectory(XYFormatUtilsSeglr)
add_subdirectory(XYFormatUtilsCircle)
add_subdirectory(XYFormatUtilsVector)
add_subdirectory(XYFormatUtilsMarker)
add_subdirectory(XYFormatUtilsPulse)
add_subdirectory(XYFormatUtilsWedge)
add_subdirectory(XYViewerShapes)
add_subdirectory(XYConvexGrid)
add_subdirectory(XYGridFamily)
add_subdirectory(PathUtils)
add_subdirectory(CPAEngine)
add_subdirectory(CPAPlatform)
add_subdirectory(FieldArtifacts)
add_subdirectory(PolygonGeneration)
add_subdirectory(CPAVariants)
add_subdirectory(ViewPlugSettings)
add_subdirectory(MiscGeometryTools)
add_subdirectory(IOAndPopulators)
add_subdirectory(ObjectBaseBuild)
add_subdirectory(GeoShapesLifecycle)
